# agent-project

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yaml
config/: logging.toml  settings.toml
scripts/: health_check.py  run_all.py
src/coin_trader/: __init__.py  __main__.py
src/coin_trader/agents/: data_collector.py  executor.py  monitor.py  portfolio_manager.py  risk_manager.py  strategy_ml.py  strategy_rules.py  strategy_sentiment.py  strategy_ta.py
src/coin_trader/core/: base_agent.py  config.py  logging.py  message.py  notifier.py  redis_bus.py
src/coin_trader/exchange/: auth.py  models.py  rate_limiter.py  rest_client.py  ws_client.py
src/coin_trader/strategies/: combiner.py  indicators.py  ml_model.py  signal.py
tests/: conftest.py
tests/test_agents/: test_base_agent.py  test_executor.py  test_portfolio_manager.py  test_risk_manager.py  test_strategy_rules.py
tests/test_core/: test_config.py  test_message.py  test_notifier.py  test_redis_bus.py
tests/test_exchange/: test_auth.py  test_models.py  test_rate_limiter.py  test_rest_client.py
tests/test_strategies/: test_combiner.py  test_indicators.py  test_ml_model.py  test_signal.py
